--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/angular": "1.6.40",
     "@types/angular-material": "1.1.57",
     "@types/restangular": "1.5.42",
+    "@types/lodash": "4.14.92",
     "awesome-typescript-loader": "3.2.3",
     "typescript": "2.5.3",
     "webpack": "2.2.0",
@@ -34,6 +35,7 @@
     "angular-aria": "1.6.8",
     "angular-material": "1.1.5",
     "angular-messages": "1.6.8",
-    "angular-sanitize": "1.6.8"
+    "angular-sanitize": "1.6.8",
+    "lodash": "4.17.4"
   }
 }
