--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-challenge",
-  "version": "0.0.1",
+  "version": "1.0.0-SNAPSHOT",
   "license": "MIT",
   "author": {
     "name": "Edmilson de Souza"
